# turtlebot_pathfinder

./: README.md
Examples/followbot/launch/: course.launch  (+1 more)
Examples/pathfinder/: CMakeLists.txt  package.xml
Examples/smach_fsm/: package.xml
followbot/: CMakeLists.txt  README.md  package.xml
followbot/scripts/: follower_opencv.py  follower_p.py
followbot/src/: camera_operations.cpp  turtlebot_move_action_server.cpp
followbot/worlds/: course.material
mission_control/: CMakeLists.txt  package.xml
mission_control/launch/: tester.launch
mission_control/src/: mc_test.py  mission_control.py
navigation/: CMakeLists.txt  package.xml
navigation/src/: navigation.py
pathfinder/: CMakeLists.txt  README.md  mission_control.py  navigation.py  oppsettActionServer.txt  package.xml  simple_bot.py  simple_bot_kristian.py  situational_awareness.py  vehicle_control.py
pathfinder/actions/: .calculate_point.action.swp  go_to_point.action
pathfinder/scripts/: playground.py
rosservice/server/: CMakeLists.txt
situational_awareness/: CMakeLists.txt  package.xml
situational_awareness/src/: situational_awareness.py
smach_fsm/: CMakeLists.txt
smach_fsm/scripts/: patrol.py  shapes.py  state_machine_nesting2.py  state_machine_simple.py
tutorial_msgs/: CMakeLists.txt  README.md  package.xml
tutorial_msgs/action/: calculate_point.action  get_env.action  go_to_point.action
tutorial_msgs/msg/: TestAction.msg
tutorial_msgs/srv/: CollisionAvoidance.srv  ControlMode.srv
vehicle_control/: CMakeLists.txt  package.xml
vehicle_control/src/: vehicle_control.py
(+16 files in other folders)
